[metadata]
name = validatortoolbox
version = 1.5.1
author = EasyNode.ONE
author_email = support@easynode.one
description = Harmony ONE Validator Node Toolbox and Easy Setup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/easy-node-one/validatortoolbox
project_urls =
    Bug Tracker = https://github.com/easy-node-one/validatortoolbox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = toolbox
packages = find:
python_requires = >=3.6

[options.packages.find]
where = toolbox