[metadata]
name = harmony-toolbox
version = 1.0.0
author = EasyNode.PRO
author_email = support@easynode.pro
description = Harmony ONE Validator Node Toolbox and Easy Setup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/easy-node-pro/harmony-toolbox
project_urls =
    Bug Tracker = https://github.com/easy-node-pro/harmony-toolbox/issues
    repository = https://github.com/easy-node-pro/harmony-toolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src